--- a/style.css
+++ b/style.css
@@ -30,3 +30,11 @@ body {
   padding: 20px;
   line-height: 120px;
 }
+
+.first-button {
+  background-color: rgb(92, 165, 92);
+}
+
+.second-button {
+  background-color: rgb(141, 62, 62);
+}
