--- a/style.css
+++ b/style.css
@@ -38,3 +38,11 @@ body {
 .second-button {
   background-color: rgb(141, 62, 62);
 }
+
+.genre-title {
+  background-color: rgb(26, 26, 255);
+  text-align: center;
+  font-size: 1.2rem;
+  padding: 10px;
+  margin: 5px;
+}
